[project]
name = "tiled_maps"
version = "0.0.0"
description = ""
authors = [
    {name = "Jacopo Farina", email = "jacopo1.farina@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "Pillow>=9.5.0",
    "psycopg[binary]>=3.1.9",
    "shapely>=2.0.1",
    "pyyaml!=6.0.0,!=5.4.0,!=5.4.1", # pyyaml is broken with cython 3
    "numpy>=1.26.2",
]
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.pdm.scripts]
serve_reload = "uvicorn --reload tiled_maps.http_app:app"
serve = "uvicorn --workers 32 tiled_maps.http_app:app"
typecheck = "mypy --explicit-package-bases tiled_maps"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "jsonschema-gentypes>=2.2.3",
    "mypy>=1.3.0",
    "types-Pillow>=9.5.0.4",
    "setuptools>=68.2.2",
]
